<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.VacationDetails"
    >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="400dp"
        android:layout_height="450dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/vacationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:text="@string/title"
                    />

                <EditText
                    android:id="@+id/editVacationTitle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/vacation_title"
                    android:padding="10dp"
                    />

                <TextView
                    android:id="@+id/titleErrMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone"
                    android:text="@string/title_required" />

                <TextView
                    android:id="@+id/vacationHotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:text="@string/hotel" />

                <EditText
                    android:id="@+id/editVacationHotel"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="@string/enter_hotel_or_place"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/hotelErrMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone"
                    android:text="@string/hotel_required" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/vacationStartDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/start_date"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/editVacationStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/vacationEndDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/end_date"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/editVacationEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/dateErrorMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone"
                    android:text="@string/end_date_must_be_after_start_date" />

<!--                <TextView-->
<!--                    android:id="@+id/displayAssociatedExcursions"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_marginTop="424dp"-->
<!--                    android:text="Associated Excursions"-->
<!--                    android:textSize="30sp"-->
<!--                    app:layout_constraintLeft_toRightOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="@id/editVacationEndDate" />-->
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/excursionRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createVacationDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_add_24"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>